--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   "license": "MIT",
   "devDependencies": {
     "grunt": "^0.4.3",
-    "grunt-contrib-watch": "^0.5.3",
     "grunt-contrib-compass": "^0.7.2",
     "grunt-contrib-csslint": "^0.2.0",
+    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-watch": "^0.5.3",
     "livereloadx": "^0.3.4"
   }
 }
